HTML pokemon card structure done

--- a/index.html
+++ b/index.html
@@ -102,7 +102,43 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+
+    <main>
+      <div class="" id="all">
+        <div class="pokemon-cards" id="pokemon-list">
+          <div class="pokemon">
+            <p class="pokemon-id-back">#025</p>
+            <div class="pokemon-img">
+              <img
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png"
+                alt="pokemon pikachu image"
+              />
+            </div>
+
+            <div class="pokemon-info">
+              <div class="container-name">
+                <p class="pokemon-id">#025</p>
+                <h2 class="pokemon-name">Pikachu</h2>
+              </div>
+
+              <div class="pokemon-types">
+                <p class="type electric">Electric</p>
+                <p class="type">Normal</p>
+              </div>
+
+              <div class="pokemon-stats">
+                <p class="stat">4m</p>
+                <p class="stat">12kg</p>
+              </div>
+              <!--div pokemon info-->
+            </div>
+            <!--div pokemon-->
+          </div>
+          <!--div pokemon cards-->
+        </div>
+        <!--div all-->
+      </div>
+    </main>
 
     <!-- <script src="./js/main.js"></script> -->
   </body>
