--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <header>
-      <nav class="nav">
+      <nav class="nav container">
         <img src="./img/logo.png" alt="Logo Pokédex" />
 
         <ul class="nav-list">
@@ -103,7 +104,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="container">
       <div class="" id="all">
         <div class="pokemon-cards" id="pokemon-list">
           <div class="pokemon">
